--- a/Home/View/Manager/login.html
+++ b/Home/View/Manager/login.html
@@ -71,7 +71,7 @@
             $.toptip('用户名或密码错误');
         }
         if(ret=="10000104"){
-            $.toptip('注册成功', 'success');
+            $.toptip('登录成功', 'success');
         }
 
 
