--- a/Home/View/Mine/mineTab.html
+++ b/Home/View/Mine/mineTab.html
@@ -17,16 +17,16 @@
 
 <div class="weui-tab">
  <div class="weui-tab__bd">
-  <div id="tab4" class="weui-tab__bd-item weui-tab__bd-item--active" >
+  <div id="tab3" class="weui-tab__bd-item weui-tab__bd-item--active" >
    <div class="weui-panel weui-panel_access">
     <div class="weui-panel__bd">
-     <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
+     <a href="<%$smarty.const.__APP__%>/Mine/resetpwd" class="weui-media-box weui-media-box_appmsg">
        <div class="weui-media-box__hd">
         <img class="weui-media-box__thumb" src="<%$smarty.const.IMG_URL%>/timg.jpg" alt="">
        </div>
        <div class="weui-media-box__bd">
         <h4 class="weui-media-box__title">
-          优化中
+          修改密码
         </h4>
        </div>
      </a>
