--- a/Home/View/Acadd/select.html
+++ b/Home/View/Acadd/select.html
@@ -10,97 +10,14 @@
     <link rel="stylesheet" href="<%$smarty.const.WEUI_URL%>/demos.css?v=01.01.04">
 	<script src="<%$smarty.const.AJS_URL%>jquery-2.1.4/jquery.min.js"></script>
 
-	<!--&lt;!&ndash; 新 Bootstrap 核心 CSS 文件 &ndash;&gt;-->
-	<!--&lt;!&ndash;<link rel="stylesheet" href="<%$smarty.const.ABOOT_URL%>css/bootstrapone.css">&ndash;&gt;-->
-	<!--<link rel="stylesheet" href="<%$smarty.const.ABOOT_URL%>css/bootstrap.css">-->
-        <!--&lt;!&ndash; DataTables &ndash;&gt;-->
-        <!--<link href="<%$smarty.const.PUBLIC_ROOT_URL%>plugins/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />-->
-        <!--<link href="<%$smarty.const.PUBLIC_ROOT_URL%>plugins/datatables/buttons.bootstrap4.min.css" rel="stylesheet" type="text/css" />-->
-        <!--&lt;!&ndash; Responsive datatable examples &ndash;&gt;-->
-        <!--<link href="<%$smarty.const.PUBLIC_ROOT_URL%>plugins/datatables/responsive.bootstrap4.min.css" rel="stylesheet" type="text/css" />-->
-        <!--&lt;!&ndash; Buttons examples &ndash;&gt;-->
-        <!--<script src="<%$smarty.const.PUBLIC_ROOT_URL%>plugins/datatables/dataTables.buttons.min.js"></script>-->
-        <!--<script src="<%$smarty.const.PUBLIC_ROOT_URL%>plugins/datatables/buttons.bootstrap4.min.js"></script>-->
-        <!--<script src="<%$smarty.const.PUBLIC_ROOT_URL%>plugins/datatables/jszip.min.js"></script>-->
-        <!--<script src="<%$smarty.const.PUBLIC_ROOT_URL%>plugins/datatables/pdfmake.min.js"></script>-->
-        <!--<script src="<%$smarty.const.PUBLIC_ROOT_URL%>plugins/datatables/vfs_fonts.js"></script>-->
-        <!--<script src="<%$smarty.const.PUBLIC_ROOT_URL%>plugins/datatables/buttons.html5.min.js"></script>-->
-        <!--<script src="<%$smarty.const.PUBLIC_ROOT_URL%>plugins/datatables/buttons.print.min.js"></script>-->
-        <!--&lt;!&ndash; Responsive examples &ndash;&gt;-->
-        <!--<script src="<%$smarty.const.PUBLIC_ROOT_URL%>plugins/datatables/dataTables.responsive.min.js"></script>-->
-				<!--&lt;!&ndash; 最新的 Bootstrap 核心 JavaScript 文件 &ndash;&gt;-->
-				<!--<script src="<%$smarty.const.ABOOT_URL%>js/bootstrap.min.js"></script>-->
-
 
 </head>
 <body>
-<!--<div>-->
-    <!--<form class="form-horizontal" name="f1"      action=""   method="post" >-->
-        <!--<div class="weui-cells weui-cells_form" >-->
-            <!--<div class="weui-cell">-->
-                <!--<div class="weui-cell__hd"><label class="weui-label">设备ID</label></div>-->
-                <!--<div class="weui-cell__bd">-->
-                    <!--<input class="weui-input" type="text" name="devid"  placeholder="请输入设备ID号">-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="weui-cell">-->
-                <!--<div class="weui-cell__hd"><label for="date" class="weui-label">日期</label></div>-->
-                <!--<div class="weui-cell__bd">-->
-                    <!--<input class="weui-input" id="date" type="text" name="time" placeholder="请输入日期" >-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="weui-cell">-->
-                <!--<div class="weui-cell__hd"><label for="date" class="weui-label">日期</label></div>-->
-                <!--<div class="weui-cell__bd">-->
-                    <!--<input class="weui-input" id="date1" type="text" name="time2" placeholder="请输入日期" value="<%$date%>">-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="weui-cell">-->
-                <!--<button class="weui-btn weui-btn_primary" type="submit">查询</button>-->
-            <!--</div>-->
-        <!--</div>-->
-
-    <!--</form>-->
-<!--</div>-->
-
 <div class="weui-tab" >
-  <!--<div class="container" >-->
-  <!--<div class="navbar navbar-default navbar-fixed-left" >-->
-    <!--<ul class="nav navbar-nav">-->
-      <!--<li><a href="<%$smarty.const.__APP__%>/devselect/select"><b >首页</b></a></li>-->
-      <!--<li><a href="<%$smarty.const.__APP__%>/add/add"><b>添加设备</b></a></li>-->
-      <!--<li><a href="<%$smarty.const.__APP__%>/add/move"><b>移动设备</b></a></li>-->
-      <!--<li><a href="<%$smarty.const.__APP__%>/add/saveinfo"><b>修改设备信息</b></a></li>-->
-      <!--<li><a href="<%$smarty.const.__APP__%>/add/select"><b>查询设备信息</b></a></li>-->
-      <!--&lt;!&ndash;<li><a href="<%$smarty.const.__APP__%>/acadd/add"><b>温度输入</b></a></li>&ndash;&gt;-->
-      <!--<li class="active"><a href="<%$smarty.const.__APP__%>/acadd/select"><b>查询温度情况</b></a></li>-->
-      <!--&lt;!&ndash;<li><a href="<%$smarty.const.__APP__%>/acadd/save"><b>修改温度记录</b></a></li>&ndash;&gt;-->
-      <!--<li><a href="<%$smarty.const.__APP__%>/acadd/delete"><b>删除温度记录</b></a></li>-->
-    <!--</ul>-->
-  <!--</div>-->
-  <!--</div>-->
-
     <div class="weui-tab__bd">
     <div id="tab3" class="weui-tab__bd-item weui-tab__bd-item--active">
     <form class="form-horizontal" name="f1"      action=""   method="post" >
-
-    <!--<div class="control-group" >-->
-      <!--<label class="control-label" >设备ID</label>-->
-      <!--<div class="controls"  style="margin-top: 10px">-->
-      <!--<input name="devid"  type="text" value="<%$id%>">-->
-      <!--</div>-->
-      <!--<label class="control-label" style="margin-top: 5px">日期</label>-->
-        <!--<input name="time" type="date"  value="<%$date%>">-->
-    <!--</div>-->
-
-
         <div class="weui-cells weui-cells_form" >
-        <!--<div class="weui-cell">-->
-            <!--<div class="weui-cell__hd"><label class="weui-label">设备ID</label></div>-->
-            <!--<div class="weui-cell__bd">-->
-                <!--<input class="weui-input" type="hidden" name="devid"  placeholder="请输入设备ID号">-->
-            <!--</div>-->
-        <!--</div>-->
 
             <div class="weui-cell">
                 <div class="weui-cell__hd"><label for="date" class="weui-label">起始日期</label></div>
@@ -120,30 +37,7 @@
         </div>
         <div class="container">
             <%if !empty($selectSql)%>
-            <!--<table id="datatable-buttons" class="table table-striped table-bordered" cellspacing="0" width="100%">-->
-                <!--<thead>-->
-                <!--<tr>-->
-                    <!--<th>DevId</th>-->
-                    <!--<th>温度</th>-->
-                    <!--<th>温度2</th>-->
-                    <!--<th>延迟</th>-->
-                    <!--<th>环境温度</th>-->
-                    <!--<th>时间</th>-->
-                <!--</tr>-->
-                <!--</thead>-->
-                <!--<tbody>-->
-                <!--<%foreach $selectSql as $v%>-->
-                <!--<tr>-->
-                    <!--<td><%$v.devid%></td>-->
-                    <!--<td><%$v.temp1%></td>-->
-                    <!--<td><%$v.temp2%></td>-->
-                    <!--<td><%$v.delay%></td>-->
-                    <!--<td><%$v.env_temp%></td>-->
-                    <!--<td><%$v.cur_time%></td>-->
-                <!--</tr>-->
-                <!--<%/foreach%>-->
-                <!--</tbody>-->
-            <!--</table>-->
+
             <div class="weui-panel weui-panel_access">
                 <div class="weui-panel__bd">
                     <%foreach $selectSql as $v%>
@@ -215,7 +109,7 @@
             </div>
             <p class="weui-tabbar__label">温度</p>
         </a>
-        <a href="<%$smarty.const.__APP__%>/acadd/mineTab" class="weui-tabbar__item">
+        <a href="<%$smarty.const.__APP__%>/mine/mineTab" class="weui-tabbar__item">
             <div class="weui-tabbar__icon">
                 <img src="<%$smarty.const.IMG_URL%>/icon_nav_cell.png" alt="">
             </div>
