--- a/Home/View/Add/selectDevice.html
+++ b/Home/View/Add/selectDevice.html
@@ -147,7 +147,7 @@
     </div>
     <p class="weui-tabbar__label">查询</p>
   </a>
-  <a href="<%$smarty.const.__APP__%>/acadd/mineTab" class="weui-tabbar__item">
+  <a href="<%$smarty.const.__APP__%>/mine/mineTab" class="weui-tabbar__item">
     <div class="weui-tabbar__icon">
       <img src="<%$smarty.const.IMG_URL%>/icon_nav_cell.png" alt="">
     </div>
