--- a/Home/View/Value/calendar.html
+++ b/Home/View/Value/calendar.html
@@ -51,7 +51,7 @@
                 </div>
                 <p class="weui-tabbar__label">温度</p>
             </a>
-            <a href="<%$smarty.const.__APP__%>/acadd/mineTab" class="weui-tabbar__item">
+            <a href="<%$smarty.const.__APP__%>/mine/mineTab" class="weui-tabbar__item">
                 <div class="weui-tabbar__icon">
                     <img src="<%$smarty.const.IMG_URL%>/icon_nav_cell.png" alt="">
                 </div>
@@ -89,7 +89,7 @@
 
         });
         function changePrice(date,price ) {
-            console.log(date,price,devid);
+           // console.log(date,price,devid);
             if (price!=-9999){
                 window.location.href = '<%$smarty.const.__APP__%>/Value/todayValue?devid='+devid+'&date='+date;
             }
